# libfenc

./: FENCToolkitHelp.md  INSTALL  LibFencDevelopment.md  Makefile.am  Makefile.in  ProjectHome.md  README.first  SupportedSchemes.md  abe_policy.y  build.sh  configure  configure.ac  libfenc_ABE_common.c  libfenc_WatersCP.c  libfenc_ciphertext.c
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
benchmark/: Makefile.in
benchmarks/: benchmark.c  d224.param  run_test.py
branches/0.1.0/: configure.ac
branches/0.1.0/benchmark/: ._Makefile.am  Makefile.am  Makefile.in
branches/0.1.0/debian/: emacsen-remove.ex  emacsen-startup.ex  libfenc.default.ex  postinst.ex  postrm.ex
branches/0.1.0/misc/: build-arm-pbc.sh  libfenc0_0.1.0-1_i386.deb
branches/0.1.0/src/: libfenc.c  libfenc_LSSS.c  libfenc_group_params.c
branches/0.1.0/tools/: ._Makefile.am  AUTHORS  common.h  mgabe-dec.c
branches/dev-0.9/: build.sh
branches/dev-0.9/benchmarks/: common.c
branches/dev-0.9/pbc-0.5.8/: ChangeLog
branches/dev-0.9/src/: README  config.h.in  libfenc_LSW.h
branches/dev-0.9/tools/: policy-tool.c
branches/dev-1.0/: README
branches/dev-1.0/autom4te.cache/: requests  traces.0  traces.2
branches/dev-1.0/benchmarks/: Makefile
branches/dev-1.0/debian/: control  emacsen-install.ex  libfenc.doc-base.EX  menu.ex  prerm.ex  shlibs.local.ex
branches/dev-1.0/doc/: Makefile
branches/dev-1.0/manual/: Makefile  introduction.tex
branches/dev-1.0/misc/: build-SSL-abeCrt.sh  build-deb-fenc.sh
branches/dev-1.0/pbc-0.5.8/: configure.ac
branches/dev-1.0/src/: Makefile.in  libfenc_group_params.h  libfenc_utils.h
branches/dev-1.0/tools/: NEWS  README
branches/dev-1.0/trunk/: README  libfenc_WatersSimpleCP.c
debian/: changelog  watch.ex
doc/: api.tex  localdefs.tex  main.bib
misc/: build-arm-fenc.sh  build-arm_sim-openssl0.9.8n.sh  build-sim-pbc.sh  build-x64-pbc.sh  pbc_configure.ac.patch
pbc-0.5.6/: ChangeLog  MDG_NOTES  Makefile  Makefile.in  config.h  config.h.in  config.status  configure  gmp.h  libtool
pbc-0.5.6/.deps/: libpbc_la-a_param.Plo  libpbc_la-curve.Plo  libpbc_la-darray.Plo  libpbc_la-extend_printf.Plo  libpbc_la-field.Plo  libpbc_la-get_time.Plo  libpbc_la-hilbert.Plo  libpbc_la-init_random.Plo  libpbc_la-memory.Plo  libpbc_la-mpc.Plo  libpbc_la-multiz.Plo  libpbc_la-naivefp.Plo  libpbc_la-pairing.Plo  libpbc_la-param.Plo  libpbc_la-z.Plo  pbc_pbc-darray.Po  pbc_pbc-parser.tab.Po  pbc_pbc-pbc.Po
pbc-0.5.6/autom4te.cache/: output.0  output.1  traces.0
pbc-0.5.6/example/: Makefile  Makefile.in
pbc-0.5.6/example/.deps/: bls.Po  joux.Po  yuanli.Po  zhangkim.Po
pbc-0.5.6/pbc/: lex.yy.c  lex.yy.h  parser.tab.c
pbc-0.5.8/: Makefile.in
pbc-0.5.8/example/: Makefile.in
scripts/: autocheck.sh  build-SSL-abeCrt.sh  testSSL.sh
scripts/extinct/: dfjk  test_libfenc.c
src/: AUTHORS  COPYING  INSTALL  MDG_NOTES  Makefile  Makefile.am  Makefile.in  TODO  config.h.in  config.status  configure  configure.ac  libfenc.c  libfenc.h  libfenc_ABE_common.c  libfenc_ABE_common.h  libfenc_LSSS.c  libfenc_LSW.c  libfenc_LSW.h  libfenc_WatersCP.c  libfenc_WatersCP.h  libfenc_WatersSimpleCP.c  libfenc_WatersSimpleCP.h  libfenc_group_params.c  libfenc_group_params.h  libfenc_utils.c  libfenc_utils.h  libtool  policy_lang.tab.c  policy_lang.y  test_libfenc.c  test_libfencCP.c
src/abedemo/: newtest.msk
src/abedemo/abedemo.dSYM/Contents/: Info.plist
src/abedemo/abedemo.dSYM/Contents/Resources/DWARF/: abedemo
src/autom4te.cache/: output.3  requests  traces.0  traces.2  traces.3
src/test_libfenc.dSYM/Contents/: Info.plist
src/test_libfenc.dSYM/Contents/Resources/DWARF/: test_libfenc
tags/release-0.9/pbc-0.5.8/: configure
tags/release-0.9/src/: configure.ac
tags/release-0.9/tools/: Makefile.in  common.c
tags/release-1.0/: libfenc_ABE_common.c
tags/release-1.0/autom4te.cache/: output.2
tags/release-1.0/debian/: copyright  cron.d.ex  init.d.ex  manpage.sgml.ex  manpage.xml.ex  preinst.ex
tags/release-1.0/doc/: lsw09_details.tex
tags/release-1.0/misc/: libfenc-dev_0.1.0-1_i386.deb
tags/release-1.0/tools/: mgabe-setup.c
tools/: INSTALL  Makefile  Makefile.am  Makefile.in  common.c  common.h  config.h  configure  configure.ac  mgabe-dec.c  mgabe-enc.c  mgabe-keygen.c  mgabe-setup.c  policy-tool.c  test.sh
tools/autom4te.cache/: output.0  output.2  traces.0
trunk/: Doxyfile  Makefile.am  Makefile.in  README  README.first  abe_policy.y  build.sh  config.h.in  configure  configure.ac  libfenc_ciphertext.c  libfenc_ciphertext.h
trunk/autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2
trunk/benchmark/: Makefile.in  base64.h
trunk/benchmarks/: base64.c  benchmark.c  run_test.py
trunk/debian/: init.d.lsb.ex
trunk/doc/: lewko.tex  libfenc-manual.blg  libfenc-manual.tex  libfenc-manual.toc  licenseattribution.tex
trunk/manual/: usage.tex
trunk/misc/: build-arm-gmp.sh  build-arm_sim-openssl1.0.0.sh  build-sim-fenc.sh  build-sim-gmp.sh  pbc_Makefile.am.patch
trunk/pbc-0.5.6/: Makefile.in  configure
trunk/pbc-0.5.6/.deps/: benchmark_benchmark-benchmark.Po  benchmark_ellnet-ellnet.Po  benchmark_timersa-timersa.Po  libpbc_la-d_param.Plo  libpbc_la-dlog.Plo  libpbc_la-fp.Plo  (+16 more)
trunk/pbc-0.5.8/: configure
trunk/scripts/: build-miracl-arm  mod-linux-ld_so_conf.sh  testSSL.sh
trunk/src/: Makefile  Makefile.am  Unknown  config.h  configure  configure.ac  libfenc.c  libfenc.h  libfenc_ABE_common.c  libfenc_ABE_common.h  libfenc_LSSS.c  libfenc_LSSS.h  libfenc_LSW.c  libfenc_WatersCP.c  libfenc_WatersCP.h  libfenc_WatersSimpleCP.c  libfenc_group_params.c  libfenc_group_params.h  libfenc_utils.c  policy_lang.tab.c  policy_lang.y  test_libfencCP.c
trunk/tools/: INSTALL  Makefile  Makefile.am  Makefile.in  base64.c  base64.h  common.c  common.h  config.h.in  config.status  configure  d224.param  mgabe-dec.c  mgabe-enc.c  mgabe-keygen.c  mgabe-setup.c  policy-tool.c  test.sh
trunk/tools/autom4te.cache/: requests  traces.1  traces.2
wiki/: FENCToolkitHelp.wiki  LibFencDevelopment.wiki  SupportedSchemes.wiki
(+38 files in other folders)
